update cours 41 - toujours en cours

--- a/041_module_stringaray_part01/makefile
+++ b/041_module_stringaray_part01/makefile
@@ -5,7 +5,7 @@ stats.exe : stats.o intarray.o tools.o
 	gcc stats.o intarray.o tools.o -o stats.exe
 
 test_array.exe : test_array.o intarray.o tools.o jstr.o stringarray.o
-	gcc test_array.o intarray.o tools.o jstr.o -o test_array.exe
+	gcc test_array.o intarray.o tools.o jstr.o stringarray.o -o test_array.exe
 
 intarray.o : intarray.c intarray.h tools.h
 	gcc -c intarray.c
@@ -16,7 +16,7 @@ jstr.o : jstr.c jstr.h tools.h intarray.o
 stringarray.o : stringarray.c stringarray.h jstr.h tools.h
 	gcc -c stringarray.c
 
-test_array.o : test_array.c intarray.h tools.h jstr.h
+test_array.o : test_array.c intarray.h tools.h jstr.h stringarray.h
 	gcc -c test_array.c
 
 tools.o : tools.c tools.h
